Remove size change until fixed on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,4 @@ code {
 
 .linkLogo:hover {
   color: #ffaa4c;
-  font-size: 10.5rem;
-  transition: 0.3s ease-out;
 }
